--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
       <b>$10 cheese pizza</b>
       <ul>
-        <li>$1 pepperoni</li>
-        <li>$1 mushrooms</li>
-        <li>$1 green peppers</li>
-        <li>$3 white sauce</li>
-        <li>$5 gluten-free crust</li>
+        <li class="pepperoniList">$1 pepperoni</li>
+        <li class="mushroomList">$1 mushrooms</li>
+        <li class="greenPepperList">$1 green peppers</li>
+        <li class="sauceList">$3 white sauce</li>
+        <li class="crustList">$5 gluten-free crust</li>
       </ul>
       <strong>$21</strong>
     </aside>
